Update JEI plugin to use new apis